Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<div class="single-slide-item-tablecell">
 							<div class="slider_content">
 								<h1>Somos PUMA<br> <span class="typed"
-										data-elements="La tienda de ropa mas confiable de NewFlowers"></span></h1>
+										data-elements="La tienda de ropa más confiable de NewFlowers"></span></h1>
 
 								<div class="vid_btn_wrap">
 
