Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 				<div class="col-md-7 col-sm-12 col-xs-12">
 					<div class="about_content">
-						<h2 class="about_title">Sobe PUMA</h2>
+						<h2 class="about_title">Sobre PUMA</h2>
 						<p>
 							PUMA es la tienda de ropa vigente más antigua en la ciudad. Fuimos los primeros en
 							incorporar artículos exclusivos, y seguimos innovando para ofrecerte lo mejor. Siempre
