Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 				<div class="contenedor">
 					<div class="single_con">
 						<i class="ti-link"></i>
-						<p><a href="https://discord.com/invite/S4KdzRNVVQ">discord/gg.com</a></p>
+						<p><a href="https://discord.com/invite/S4KdzRNVVQ">discordgg/</a></p>
 					</div>
 					<iframe src="https://discord.com/widget?id=1244801026918449222&theme=dark" width="70%" height="500"
 						allowtransparency="true" frameborder="0"
